--- a/static/css/main.css
+++ b/static/css/main.css
@@ -76,8 +76,9 @@ h2{
 
 
 .error {
-    background: #F0D6D6; 
-    padding: 0.5em;
+    color: red;
+    font-size: .8em;
+    background: #FFFFFF; 
 }
 
 
