--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h1>Welcome to FlaskTaskr.</h1>
-<div class="lead">Please login to access your task list.</div>
+<h3>Please login to access your task list.</h3>
 
 <form class="form-signin" role="form" method="post" action="/">
     {{ form.csrf_token }}
