--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -39,7 +39,7 @@
                 {% endif %}
             </span>
         </p>    
-        <p><input type="submit" value="Submit"</p>
+        <p><input class="btn btn-default" type="submit" value="Submit"</p>
     </form>
 </div>
 <div class="entries">
@@ -61,7 +61,7 @@
             {% for task in open_tasks %}
                 <tr>
                     <td width="200px">{{ task.name }}</td>
-                    <td width="75px">{{ task.due_date }}</td>
+                    <td width="100px">{{ task.due_date }}</td>
                     <td width="100px">{{ task.posted_date }}</td>
                     <td width="50px">{{ task.priority }}</td>
                     <td width="90px">{{ task.poster.name }}</td>
@@ -83,7 +83,7 @@
             <thead>
                 <tr>
                     <th width="200px"><strong>Task Name</strong></th>
-                    <th width="75px"><strong>Due Date</strong></th>
+                    <th width="100px"><strong>Due Date</strong></th>
                     <th width="100px"><strong>Posted Date</strong></th>
                     <th width="50px"><strong>Priority</strong></th>
                     <th width="90px"><strong>Posted By</strong></th>
