--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,9 @@
 body {
-font-family: sans-serif; background: #eee;
+    padding: 60px 0;
+    background: #ffffff;
+}
+.footer {
+    padding-top: 30px;
 }
 
 a,h1,h2{ 
@@ -78,8 +82,7 @@ h2{
 .error {
     color: red;
     font-size: .8em;
-    background: #FFFFFF; 
-}
+ }
 
 
 .datagrid table { 
